--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -3,6 +3,7 @@
 @forward "banner";
 @forward "top";
 @forward "middle";
+@forward "middle-bottom";
 @forward "logos";
 @forward "footer";
 @forward "footer-bottom";
