--- a/scss/layouts/_layout.scss
+++ b/scss/layouts/_layout.scss
@@ -37,6 +37,10 @@ body { // This was made to get rid of white space.
     margin: 0; // Sets the top and bottom margins of an element to 0 and centers it horizontally within its parent element.
 }
 
+h3 {
+    margin: 0;
+}
+
 .section {
     padding: 50px 0px;
 }
