--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ body {
   margin: 0;
 }
 
+h3 {
+  margin: 0;
+}
+
 .section {
   padding: 50px 0px;
 }
@@ -166,7 +170,7 @@ body {
 }
 
 .header-btn {
-  margin-left: 16px;
+  margin-left: 24px;
   border-radius: 4px;
   fill: #FFF;
   background-color: #333645;
@@ -181,6 +185,7 @@ body {
 
 .search-icon {
   padding: 0 10px;
+  color: #333645;
   background: transparent;
   border: none;
 }
@@ -190,7 +195,7 @@ body {
 
 .phone-icon {
   display: inline-block;
-  color: inherit;
+  color: #333645;
   text-decoration: none;
   border-bottom: 2px solid transparent;
 }
@@ -208,6 +213,11 @@ body {
 .search-bar-container {
   display: flex;
   flex-direction: row;
+}
+
+.phone-and-button {
+  display: flex;
+  align-items: center;
 }
 
 .banner {
@@ -357,10 +367,12 @@ body {
 }
 
 .h1-link {
+  line-height: 0;
+  border-bottom: 3px solid transparent;
   text-decoration: none;
 }
 .h1-link:hover {
-  text-decoration: underline;
+  border-bottom: 3px solid #333645;
 }
 
 .block {
@@ -594,14 +606,14 @@ body {
   align-items: center;
 }
 
-.top-h2 {
-  grid-area: top-h2;
-}
-
 .top-h1 {
   display: grid;
   justify-content: center;
   grid-area: top-h1;
+}
+
+.top-h2 {
+  grid-area: top-h2;
 }
 
 .top-box-1 {
@@ -645,14 +657,13 @@ body {
 .middle h2 {
   margin-bottom: 40px;
 }
+.middle p {
+  line-height: 1.875rem;
+  margin-bottom: 25px;
+}
 .middle a {
   text-decoration: none;
   color: #FFF;
-}
-
-p {
-  line-height: 1.875rem;
-  margin-bottom: 25px;
 }
 
 .middle-row {
@@ -779,6 +790,212 @@ p {
 .client-quote-author {
   display: flex;
   flex-direction: column;
+}
+
+.title-padding {
+  padding: 50px 0 20px 0;
+  margin-top: 0;
+}
+
+.ln-title {
+  font-size: 2.25rem;
+  line-height: 1.1;
+  font-weight: 600;
+  color: #333645;
+}
+
+.ln-title-2 {
+  position: relative;
+  font-size: 1.625rem;
+  line-height: 0;
+  font-weight: 600;
+  color: #333645;
+  border-bottom: 2px solid transparent;
+  text-decoration: none;
+}
+.ln-title-2:hover {
+  border-bottom: 2px solid #333645;
+}
+.ln-title-2 i {
+  font-style: normal;
+  padding-left: 10px;
+}
+
+.section-ln {
+  padding: 0 0 50px 0;
+}
+
+.ln-container {
+  padding-top: 30px;
+}
+
+.block-ln {
+  padding: 30px;
+}
+.block-ln h3 {
+  line-height: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 15px;
+  padding-top: 30px;
+}
+.block-ln span {
+  font-size: 0.85rem;
+  text-transform: uppercase;
+  color: rgba(51, 54, 69, 0.5);
+}
+.block-ln p {
+  font-size: 0.8125rem;
+  line-height: 1.375rem;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: #666;
+}
+
+.flex-center {
+  margin-bottom: 15px;
+}
+
+.hide-small {
+  display: none;
+}
+
+.article-link {
+  text-decoration: none;
+}
+
+.img-container {
+  position: relative;
+  width: calc(100% + 60px);
+  height: auto;
+  margin: -30px -30px 0 -30px;
+}
+
+.ln-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.btn-ln {
+  position: absolute;
+  right: 0;
+  top: 10px;
+  font-size: 0.75rem;
+  line-height: 1.438rem;
+  padding: 0 10px;
+}
+
+.read-more {
+  line-height: 35px;
+  padding: 5px 15px;
+  border-radius: 3px;
+}
+
+.clr-txt-1 {
+  color: #4183D7;
+}
+
+.clr-txt-2 {
+  color: #333645;
+}
+
+.clr-txt-3 {
+  color: #CE4125;
+}
+
+.user {
+  width: 100%;
+  margin-top: 30px;
+  padding-top: 30px;
+  border-top: 1px solid #CCC;
+}
+
+.ln-avatar {
+  border-radius: 50%;
+}
+
+.details {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  padding-left: 20px;
+  color: #666;
+}
+
+.text-primary {
+  font-weight: 600;
+  color: #333645;
+}
+
+.btn-ln {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #FFF;
+}
+.btn-ln:hover {
+  text-decoration: underline;
+}
+
+.read-more {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #FFF;
+}
+
+.btn-ln-it {
+  background-color: #4183D7;
+}
+
+.btn-ln-software-1 {
+  background-color: #333645;
+}
+
+.btn-ln-software-2 {
+  background-color: #F7B322;
+}
+
+.btn-ln-training {
+  background-color: #CE4125;
+}
+
+.block-ln {
+  position: relative;
+  top: 0;
+  transition: 0.5s ease;
+  border: 1px solid #CCC;
+  cursor: pointer;
+  box-shadow: 0px 3px 35px rgba(0, 0, 0, 0.1);
+}
+.block-ln:hover {
+  border-color: transparent;
+  top: -10px;
+  transition: 0.5s ease;
+  border: 1px solid #CCC;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.ln-title-2 {
+  display: inline-flex;
+  align-items: center;
+}
+
+.txt-area-ln {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.ln-txt-1 {
+  display: flex;
+  flex-direction: row;
+}
+
+.user {
+  display: flex;
+  flex-direction: row;
 }
 
 footer {
@@ -964,8 +1181,8 @@ footer a:hover {
   background-color: #212330;
   color: #FFF;
   font-size: 0.8125rem;
-  padding-top: 10px;
-  padding-bottom: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 .footer-bottom-box ul {
   padding-left: 0;
