--- a/scss/layouts/_logos.scss
+++ b/scss/layouts/_logos.scss
@@ -1,5 +1,7 @@
+@use "../base" as *;
 @use "../utilities" as *;
+@use "../vendors" as *;
 
-//////// Bottom Logos ////////
+//////// Layout ////////
 
 
