--- a/scss/layouts/_top.scss
+++ b/scss/layouts/_top.scss
@@ -15,6 +15,10 @@
         }
 
         h1 {
+            position: relative;
+            top: 25px;
+            margin-bottom: -50px;
+
             a {
                 color: $top-text-colour;
             }
