--- a/scss/layouts/_layout.scss
+++ b/scss/layouts/_layout.scss
@@ -32,9 +32,9 @@
 
 //// Layout ////
 
-body { // This was made to get rid of white space.
+body { 
     letter-spacing: .4px;
-    margin: 0; // Sets the top and bottom margins of an element to 0 and centers it horizontally within its parent element.
+    margin: 0; // Sets the top, bottom, left, and right margins of an element to 0.
 }
 
 h1 {
