--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -2,9 +2,9 @@
 @forward "header";
 @forward "main-nav";
 @forward "banner";
-@forward "top";
-@forward "middle";
-@forward "middle-bottom";
+@forward "ourservices";
+@forward "welcometo";
+@forward "latestnews";
 @forward "logos";
 @forward "footer";
 @forward "footer-bottom";
