--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -8,7 +8,7 @@ $green            : #00B67B;
 $green-2          : #2ECC71;
 $hover-green      : #009B69;
 $teal-grey        : #A3A8AC;
-$blue             : #4387f6;
+$blue             : #4387F6;
 $hover-blue       : #166AF4;
 $neutral-blue     : #4183D7;
 $dark-ish-blue    : #323544;
@@ -49,16 +49,6 @@ $banner-text-colour         : $white;
 $banner-btn-txt             : $white;
 $banner-btn                 : $pink;
 $banner-btn-hover           : $pink-darker;
-
-$mid-text-colour            : $white;
-$mid-btn-1-background       : $even-darker-blue;
-$mid-btn-2-background       : $blue;
-$mid-btn-3-background       : $green;
-$mid-btn-1-hover            : $darkest-blue;
-$mid-btn-2-hover            : $hover-blue;
-$mid-btn-3-hover            : $hover-green;
-$client                     : $teal-grey;
-$star                       : $yellow;
 
 $ln-p-colour                : $grey-red-2;
 $ln-details-colour          : $grey-red-2;
